web-server-test.yml
### File            : web-server-test.yml
### Description     : Test pod for testing installed kubernetes
### Author          : Michael Yasko
### Version history :

apiVersion : apps/v1
kind: Deployment
metadata:
  name: web-server-test
  labels:
    env : test
    app : n0wm-test-application
    tier : frontend
    owner : MichaelYasko
    project: n0wm-test-prj
spec:
  selector:
    matchLabels:
      project: n0wm-test-prj
  template:
    metadata:
      labels:
        env : test
        app : n0wm-test-application
        owner : MichaelYasko
        project: n0wm-test-prj
        monitoring: "true"
    spec:
      containers:
      - name: n0wm-test-prj-web
        image: n0where3an/testdocker:1.3
        ports:
        - containerPort: 8000
        - containerPort: 9100
          name: metrics
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8000
          initialDelaySeconds: 120
          periodSeconds: 20
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /readycheck
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
---
apiVersion : v1
kind: Service
metadata:
  name: n0wm-test-deployment-autoscaling
  labels:
    env   : test
    app   : n0wm-test-autoscaling
    owner : MichaelYasko
    project: n0wm-test-prj
spec:
  type: LoadBalancer
  selector:
    project: n0wm-test-prj
    env    : test
    owner  : MichaelYasko
  ports:
    - name: app-listener
      protocol: TCP
      port : 8000
      targetPort : 8000
