web-server-test-istio.yml
### File            : web-server-test-istio.yml
### Description     : Test pod for testing installed kubernetes
### Author          : Michael Yasko
### Version history :

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: n0wm-ws-test-gateway
  namespace: n0wm-ws-test
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "n0wm-ws-test-istio.local.net"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: n0wm-ws-test-vsvc
  namespace: n0wm-ws-test
spec:
  hosts:
    - "n0wm-ws-test-istio.local.net"
  gateways:
    - n0wm-ws-test-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: n0wm-ws-test
            port:
              number: 8000
#EOF
